// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Overlay Dark 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <p
      class="sc-AykKF jKbmDj"
      color="currentColor"
      font-size="16px"
    >
      Background content
    </p>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC sc-fzXfNQ hrKngL"
    >
      <div
        class="Box-sc-1qu1edy-0 sc-fzXfNi dLcGpC"
      >
        <p
          class="sc-AykKF jKbmDj"
          color="currentColor"
          font-size="16px"
        >
          Overlay content
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Overlay Light (default) 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <p
      class="sc-AykKF jKbmDj"
      color="currentColor"
      font-size="16px"
    >
      Background content
    </p>
    <div
      class="Box-sc-1qu1edy-0 sc-AykKC sc-fzXfNQ bPGMPU"
    >
      Overlay content
    </div>
  </div>
</div>
`;
